<resources>
    <string name="app_name">SimpleApp</string>
    <string name="olahraga">Olahraga</string>
    <string name="created_by_group_I">Created By Group I</string>
    <string name="kelompok_i">Kelompok I</string>
    <string name="tentang">Tentang</string>
    <string name="username">Username :</string>
    <string name="name">Name :</string>
    <string name="nim">NIM :</string>
    <string name="alamat">Alamat :</string>
    <string name="hobi">Hobi :</string>
    <string name="program_studi">Program Studi :</string>
    <string name="universitas">Universitas :</string>
    <string name="imagediscussion">ImageDiscussion</string>
    <string name="pengertian">Pengertian</string>
    <string name="sejarah">Sejarah</string>
    <string name="referensi">Referensi</string>
    <string name="activity_3">Activity 3</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="regis">Register</string>
    <string name="logout">Logout</string>

</resources>